discussion/kv_engine/176460/176460_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-28 19:06:05.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 19:46:42.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47164/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(835): error C2039: "setBucketQuotaChangeTaskWaitTime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47164/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18405/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:835:27: error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
            configuration.setBucketQuotaChangeTaskWaitTime(std::stoul(val));
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18405/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18405/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39621/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39621/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28666/ : FAILURE

Compile error at [2022-06-28T19:23:44.991Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8076/ : FAILURE

Compile error at [2022-06-28T19:16:34.492Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8076/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8176/ : FAILURE

Compile error at [2022-06-28T19:22:20.515Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20630/ : FAILURE

Compile error at [2022-06-28T19:22:08.616Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20630/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19500/ : FAILURE

Compile error at [2022-06-28T19:46:20.356Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19500/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21274/ : FAILURE

Compile error at [2022-06-28T19:20:34.900Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20284/ : FAILURE

Compile error at [2022-06-28T19:19:02.981Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:835:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17553/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
